src/objects/PSA_Invoice_Summary_Line_History__c.object
<CustomObject>
    <description>Contains a copy of records deleted from the invoice summary line object (when billing events are deleted)</description>
    <fields>
        <fullName>PSA_Amount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_Event_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the parent Billing Event History record</description>
        <inlineHelpText>Lookup to the parent Billing Event History record</inlineHelpText>
        <label>Billing Event History</label>
        <referenceTo>PSA_Billing_Event_History__c</referenceTo>
        <relationshipLabel>Invoice Summary Line History</relationshipLabel>
        <relationshipName>Invoice_Summary_Line_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Billing_Event_Name__c</fullName>
        <description>Name of the related Billing Event that was deleted.  This will be used to link to the parent Billing Event History record.</description>
        <inlineHelpText>Name of the related Billing Event that was deleted.  This will be used to link to the parent Billing Event History record.</inlineHelpText>
        <label>Billing Event Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSA_Summary_Line_Type__c</fullName>
        <description>Categories according to which billing event items will be subtotaled and displayed on an invoice</description>
        <inlineHelpText>Categories according to which billing event items will be subtotaled and displayed on an invoice</inlineHelpText>
        <label>Summary Line Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Line_Id__c</fullName>
        <label>Summary Line Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Invoice Summary Line History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PSA_Billing_Event_History__c</columns>
        <columns>PSA_Billing_Event_Name__c</columns>
        <columns>PSA_Amount__c</columns>
        <columns>Summary_Line_Id__c</columns>
        <columns>PSA_Summary_Line_Type__c</columns>
        <columns>PSA_Description__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ISLH-{000000}</displayFormat>
        <label>Invoice Summary Line History Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Summary Line History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>